# zed-autoit

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
languages/autoit/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  outline.scm  overrides.scm  tasks.json
samples/: hello.au3  helpers.au3
scripts/: test-corpus.ps1
snippets/: autoit.json
src/: lib.rs
